--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     display: none;
   }
 </style>
-<script type="module" src="main.js"></script>
+<script src="./dist/main.js"></script>
 
 </html>
